--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    <script src="./main.js"></script>
     <input type="text">
     <button>Trocar COR</button>
 </body>
