--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
-    <title>Document</title>
+    <title>Trocar COR</title>
+    <script src="./main.js" defer></script>
 </head>
 <body>
-    <script src="./main.js"></script>
     <input type="text">
     <button>Trocar COR</button>
 </body>
